fix: tab border has white space

--- a/src/shared/components/Tab/Tab.module.scss
+++ b/src/shared/components/Tab/Tab.module.scss
@@ -4,10 +4,7 @@
 .tab {
   border-style: solid;
 
-  border-top-width: 2px;
-  border-bottom-width: 2px;
-  border-left-width: 1px;
-  border-right-width: 1px;
+  border-width: 1px;
 
   padding: 0px;
   margin: 0px;
